@@ -1,3 +1,3 @@
 FR0004152593.EURONEXT.PAR;0.50;1.00
-NL0000400653.EURONEXT.PAR;12.00;24.00
+NL0000400653.EURONEXT.PAR;20.00;24.00
 FR0000073272.EURONEXT.PAR;14.00;21.00
