@@ -6,6 +6,8 @@ On the road for v0.4.6 (Nausicaa2)
 ===============================================================================
 
 2007-02-20  Gilles Dumortier <dgil at ieee.org>
+	* View Stops : do not display portfolio information for a quote not in
+	  the portfolio !
 	* View Stops : be able to add a quote not in the matrix
 	* Barchart plugin : a request per letter - otherwise, some symbols are
 	  missing (like CSCO)
